syntax = "proto3";
package user;
option go_package = "../user";

// 注册
message RegisterRequest {
    string email = 1;
    string password = 2;
    string nickName = 3;
    int64 gender = 4;
}
message RegisterResponse {
}

// 登录
message LoginRequest {
    string email = 1;
    string password = 2;
}
message LoginResponse {
    string accessToken = 1;
    int64 accessExpire = 2;
}


// 个人信息
message PersonalInfoRequest {
    int64 id = 1;
}
message PersonalInfoResponse {
    int64 userId = 1;
    string nickName = 2;
    int64 gender = 3;
    string email = 4;
    string avatarUrl = 5;
}

message ResetPasswordRequest {
    string email = 1;
    string oldPassword = 2; // 旧密码
    string newPassword = 3; // 新密码
}
message ResetPasswordResponse {
    bool success = 1;
}

// 更新用户在线状态
message UpdateOnlineStatusRequest {
    int64 userId = 1;
    bool isOnline = 2;
}
message UpdateOnlineStatusResponse {
}

// 获取用户在线状态
message GetOnlineStatusRequest {
    int64 userId = 1;
}
message GetOnlineStatusResponse {
    bool isOnline = 1;
    int64 lastOnlineTime = 2;
}

// 修改用户信息
message ModifyUserInfoRequest {
    int64 userId = 1;
    string nickName = 2;
    int64 gender = 3;
    string avatarUrl = 4;
}
message ModifyUserInfoResponse {
    bool success = 1;
}

service UserClient {
    rpc Login(LoginRequest) returns(LoginResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
    rpc PersonalInfo(PersonalInfoRequest) returns(PersonalInfoResponse);
    rpc ResetPassword(ResetPasswordRequest) returns(ResetPasswordResponse);
    rpc UpdateOnlineStatus(UpdateOnlineStatusRequest) returns(UpdateOnlineStatusResponse);
    rpc GetOnlineStatus(GetOnlineStatusRequest) returns(GetOnlineStatusResponse);
    rpc ModifyUserInfo(ModifyUserInfoRequest) returns(ModifyUserInfoResponse);
}